now works correctly on mobile

--- a/s.css
+++ b/s.css
@@ -9,6 +9,14 @@ body {
   font-family: 'Muli', sans-serif;
 }
 
+@media screen and (max-device-width: 480px),
+       screen and (-webkit-min-device-pixel-ratio: 2),
+       screen and (device-width: 768px) {
+  body {
+    -webkit-text-size-adjust:none;
+  }
+}
+
 a { text-decoration: none; }
 h1 {
   font-size: 4.6em;
